New Page - filterMapReduce

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <ul>
       <li><a href="src/Pages/greetings.html">Greeting as anonymous</a></li>
+      <li><a href="src/Pages/filterMapReduce.html">Filter-Map-Reduce</a></li>
     </ul>
 
     <script src="src/index.js"></script>
