--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <ul>
       <li><a href="src/Pages/greetings.html">Greeting as anonymous</a></li>
       <li><a href="src/Pages/filterMapReduce.html">Filter-Map-Reduce</a></li>
+      <li>
+        <a href="src/Pages/modifyingProperties.html">Modifying-Properties</a>
+      </li>
+      <li><a href="src/Pages/createProfile.html">Profile</a></li>
     </ul>
 
     <script src="src/index.js"></script>
